# optiflow

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  README.md  alembic.ini  compose.yaml  dispatch.csv  remove_electrochemical_storage_model.py  run-docker.cmd  run-docker.sh
.github/workflows/: ci.yml
.patch-backup-remove-stochastic/: status-before.txt
apps/optiflow_cli/: CMakeLists.txt  main.cpp
apps/optimizer_service/: CMakeLists.txt  main.cpp
apps/solve_cli/: CMakeLists.txt  main.cpp
backend/: Dockerfile  README.md  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  provenance.py  runner.py  scenario_inputs.py  scenario_metadata.py  scenario_parameters.py  scenario_timeline.py  scenario_uploads.py  seed.py  timestamps.py
backend/tests/: test_api.py  test_documentation.py  test_migrations.py  test_runner.py  test_scenario_metadata.py  test_scenario_parameters.py  test_scenario_timeline.py  test_seed.py  test_timestamps.py
build_services/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
db/migrations/: 001_init.sql
docs/: API.md  ARCHITECTURE.md  BACKEND_FRONTEND_ROADMAP.md  DATABASE.md  DEPLOYMENT.md  Doxyfile.in  MODEL.md  STOCHASTIC_EXTENSION.md  model.md
examples/: constraints.csv  inflow_three_hour_pulse.csv  inflow_zero.csv  inflows.csv  price_inflow.csv  prices.csv  prices_heaviside.csv  scenario.csv
examples/multistep/: prices.csv  scenario.csv
examples/yearly/: README.md  inflows.csv  prices.csv  scenario.csv  scenario_high_battery_degradation.csv  scenario_high_operating_cost.csv  scenario_no_battery.csv  scenario_no_pumping.csv
frontend/: Dockerfile  README.md  app.js  container_assets.test.mjs  dispatch_charts.mjs  dispatch_charts.test.mjs  index.html  nginx.conf  number_format.mjs  number_format.test.mjs  run_presentation.mjs  run_presentation.test.mjs  scenario.mjs  scenario.test.mjs  style.css  styles.css  trader.css  trader.mjs  trader.test.mjs
infra/nginx/: nginx.conf
libs/demo/: CMakeLists.txt
libs/demo/include/optiflow/demo/: CsvScenarioLoader.h  DemoScenario.h  OptimizationRequest.h
libs/demo/src/: CsvScenarioLoader.cpp  DemoScenario.cpp  OptimizationRequest.cpp
libs/optimization/: CMakeLists.txt
libs/optimization/include/optiflow/core/: CsvScenarioReader.h  HydraulicConstants.h  Scenario.h  StorageEnums.hpp  StorageTypes.h  StorageTypes.hpp
libs/optimization/include/optiflow/io/: CsvReader.hpp
libs/optimization/include/optiflow/model/: PumpedStorageModel.h  PumpedStorageModel.hpp  TerminalPenaltyModel.hpp  TerminalValueModel.hpp
libs/optimization/include/optiflow/numerics/: ActionGrid.h  ActionGrid.hpp  GridTypes.h  GridTypes.hpp  Interpolator.h  Interpolator.hpp  Policy.h  Policy.hpp  StateGrid.h  StateGrid.hpp  ValueFunction.h  ValueFunction.hpp
libs/optimization/include/optiflow/runner/: OptimizationRunner.h
libs/optimization/include/optiflow/solver/: ActionSelection.h  BellmanEvaluator.hpp  BellmanSolver.h  BellmanSolver.hpp  DeterministicProblem.hpp  ForwardSimulator.h  ForwardSimulator.hpp  OptimizationResult.hpp  SolverTypes.hpp
libs/optimization/include/optiflow/stochastic/: StochasticBellmanSolver.h  StochasticTypes.h
libs/optimization/src/: ActionGrid.cpp  ActionSelection.cpp  BellmanSolver.cpp  CsvScenarioReader.cpp  ForwardSimulator.cpp  GridTypes.cpp  Interpolator.cpp  OptimizationRunner.cpp  Policy.cpp  PumpedStorageModel.cpp  Scenario.cpp  StateGrid.cpp  StorageTypes.cpp  ValueFunction.cpp
libs/optimization/src/core/: StorageTypes.cpp
libs/optimization/src/io/: CsvReader.cpp
libs/optimization/src/model/: PumpedStorageModel.cpp  TerminalPenaltyModel.cpp  TerminalValueModel.cpp
libs/optimization/src/numerics/: ActionGrid.cpp  Interpolator.cpp  Policy.cpp  StateGrid.cpp  ValueFunction.cpp
libs/optimization/src/solver/: BellmanEvaluator.cpp  BellmanSolver.cpp  DeterministicProblem.cpp  ForwardSimulator.cpp  OptimizationResult.cpp
libs/optimization/src/stochastic/: StochasticBellmanSolver.cpp
libs/optimizer_proto/: CMakeLists.txt
libs/optimizer_service/: CMakeLists.txt
libs/optimizer_service/include/optiflow/service/: OptimizerServiceImpl.h  ProtoConversion.h
libs/optimizer_service/src/: OptimizerServiceImpl.cpp  ProtoConversion.cpp
libs/service_common/: CMakeLists.txt
libs/service_common/include/optiflow/service/: Http.h
libs/service_common/src/: Http.cpp
protos/: README.md
samples/: day_ahead_inflows.csv  day_ahead_prices.csv  day_ahead_scenario.csv  day_ahead_stochastic_inflows.csv  day_ahead_stochastic_prices.csv  inflows_24h.csv  optimization_request_deterministic.json  optimization_request_stochastic.json  prices_24h.csv
scripts/: build.sh  check.sh  test.sh
tests/: CMakeLists.txt  check_deterministic_hydro_oracles.py  check_dispatch_validator_regression.cmake  check_multistep_example.cmake  check_resolution_analysis.cmake  check_solve_cli_invalid_input.cmake  check_solve_cli_output.cmake  check_solve_cli_validate_only.cmake  check_yearly_example.cmake  check_yearly_scenario_comparison.cmake  check_yearly_summary.cmake  test_core.cpp  test_optimizer_oracles.cpp  test_optimizer_service_smoke.cpp  test_proto_conversion.cpp  test_simple_behaviour.cpp
tests/fixtures/break_even_above/: inflows.csv  prices.csv  scenario.csv
tests/fixtures/break_even_below/: prices.csv  scenario.csv
tests/fixtures/forced_spill/: inflows.csv  prices.csv  scenario.csv
tests/fixtures/pump_generate_cycle/: inflows.csv  prices.csv  scenario.csv
tests/optimization_scenarios/: CMakeLists.txt  main.cpp
tests/unit/: ActionGridTests.cpp  BellmanSolverTests.cpp  CsvReaderTests.cpp  DeterministicProblemTests.cpp  DeterministicSanityTests.cpp  ForwardSimulatorTests.cpp  InterpolatorTests.cpp  PumpedStorageModelTests.cpp  StateGridTests.cpp  TerminalPenaltyModelTests.cpp  TestSupport.hpp  ValueFunctionTests.cpp
tools/: analyze_resolution.py  compare_scenarios.py  hydraulic_units.py  summarize_dispatch.py  validate_dispatch.py
(+32 files in other folders)
